# ccres-weather-station

./: .bumpversion.cfg  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pydocstyle.ini  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: ci.yaml  deploy_pypi.yaml  readthedoc.yaml  tests.yaml
ccres_weather_station/: __init__.py  logger.py  types.py
ccres_weather_station/bounders/: apply_bounds.py
ccres_weather_station/cli/: cli.py
ccres_weather_station/config/: config.py  config.toml  default.toml
ccres_weather_station/readers/: base.py  register.py  sirta.py
ccres_weather_station/writers/: write.py
docs/scripts/: plot.py
docs/source/: conf.py  index.md  index.rst
docs/source/_static/css/: custom.css
docs/source/api_documentation/: bounds.md  cli.md  cli.rst  config.md  index.md  index.rst  readers.md  writers.md
docs/source/developper_guide/: index.md
docs/source/get-started/: index.md
docs/source/how_to/: how-to-run.md  index.rst
docs/source/user_guide/: environment.md  index.rst
tests/: __init__.py
tests/config/: test_config.py
tests/data/config_files/: custom.toml  default.toml  no_attrs.toml  no_coord_name.toml  no_coords.toml  no_vars.toml
tests/data/sirta/: meteoairsol_1a_Lz1NairF1minPtuvPrain_v01_20201010_000000_1440.asc
tests/e2e/: test_cli_help.py  test_cli_sirta.py
tests/logger/: test_logger.py
tests/readers/: test_register.py  test_sirta.py
tests/test_cli/: test_cli.py
tests/writers/: test_automatic_attributes.py  test_config_writer.py  test_write_nc.py
